Issue #10518: Bring back the callable() builtin. Approved by Guido (BDFL) and Georg (RM).